Menu Conversaciones organizado

--- a/src/i18n/locales/es.json
+++ b/src/i18n/locales/es.json
@@ -13,8 +13,8 @@
       "dashboard": "Dashboard",
       "contacts": "Contactos",
       "companies": "Compañías",
-      "task": "Tareas",
-      "oportunidades": "Oportunuidades",
+      "tasks": "Tareas",
+      "opportunities": "Oportunuidades",
       "leads": "Leads",
       "leadsSources": "Origen de Leads",
       "leadsTracking": "Seguimiento de Leads",
