--- a/src/i18n/locales/es.json
+++ b/src/i18n/locales/es.json
@@ -1,4 +1,8 @@
 {
+  "language": {
+    "en": "English",
+    "es": "Español"
+  },
   "sidebar": {
     "dashboard": {
       "summary": "Resumen",
